<resources>
    <string name="app_name">ImProof</string>
    <string name="action_settings">Settings</string>
    <string name="starting_rec_timer_value">0:00</string>
    <string name="starting_rec_text">REC</string>
    <string name="ending_rec_text">STOP</string>
    <string name="new_project_text">New Project</string>
    <string name="select_project_text">Current Project:</string>
    <string name="title_activity_detail">Project Details</string>
    <string name="change_project_text">Change this recording\'s project</string>
</resources>
