<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.evbel.improof.MainActivity"
    tools:showIn="@layout/activity_main">

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_rec_text"
        android:id="@+id/recordButton"
        android:layout_marginStart="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:textOff="@string/starting_rec_text"
        android:textOn="@string/ending_rec_text"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/starting_rec_timer_value"
        android:id="@+id/recordTimer"
        android:singleLine="false"
        android:layout_alignTop="@+id/recordButton"
        android:textSize="40sp"
        android:layout_alignBottom="@+id/recordButton"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/newProject" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_project_text"
        android:id="@+id/newProject"
        android:layout_alignTop="@+id/recordTimer"
        android:layout_alignRight="@+id/projectList"
        android:layout_alignEnd="@+id/projectList" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/projectList"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/selectProject"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="0dp" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectProject"
        android:layout_below="@+id/newProject"
        android:layout_toEndOf="@+id/recordButton"
        android:layout_toRightOf="@+id/recordButton"
        android:layout_alignRight="@+id/newProject"
        android:layout_alignLeft="@+id/recordTimer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/selectProjectText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/recordButton"
        android:layout_above="@+id/projectList"
        android:layout_alignLeft="@+id/recordButton"
        android:text="@string/select_project_text"
        android:layout_toLeftOf="@+id/recordTimer" />

</RelativeLayout>
